--- a/lambda/package.json
+++ b/lambda/package.json
@@ -9,12 +9,9 @@
   "author": "Amazon Alexa",
   "license": "Apache License",
   "dependencies": {
-    "ask-sdk": "^2.6.0",
-    "aws-sdk": "2.637.0",
     "ask-sdk-core": "^2.7.0",
     "ask-sdk-model": "^1.19.0",
-    "ask-sdk-s3-persistence-adapter": "^2.7.0",
-    "ask-sdk-dynamodb-persistence-adapter": "^2.9.0",
-    "moment-timezone": "^0.5.23"
+    "aws-sdk": "^2.326.0",
+    "ask-sdk-s3-persistence-adapter": "^2.0.0"
   }
 }
